--- a/ml/index.html
+++ b/ml/index.html
@@ -37,7 +37,7 @@
 						</header>
 						<div class="content">
                             <p>
-                                En ML-CLIMATIZACION Aire Acondicionado somos una compañía 100% mexicana con más de 10 años de experiencia elaborando proyectos de climatización.
+                                En ML-CLIMATIZACION  somos una compañía  con más de 10 años de experiencia elaborando proyectos de climatización.
                             </p>
                             <p>
                                 Estamos comprometidos a dar solución rápida, eficaz y precisa para aplicaciones residenciales, comerciales e industriales, así como suministro e instalación, reparación de equipos de aire acondicionado, sistemas de refrigeración, ventilación y ducteria en general.
