--- a/ml/index.html
+++ b/ml/index.html
@@ -49,19 +49,25 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>#NUESTRO STACK</h2>
+							<h2>#Soluciones</h2>
 						</header>
-						<div class="content">
-							<p><strong>Javascript</strong> Como pilar fundamental de todas nuestras soluciones.</p>
-							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Node.js</li>
-								<li class="icon solid fa-bolt">Vue.js</li>
-								<li class="icon solid fa-signal">MongoDB</li>
-								<li class="icon solid fa-cog">Docker</li>
-								<li class="icon solid fa-map-marker-alt">GCP</li>
-								<li class="icon solid fa-code">Amazon AWS</li>
-							</ul>
-						</div>
+                        <div class="content">
+                            <p><strong>Algunos Trabajos</strong></p>
+                            <div class="gallery">
+                                
+                                <p>Test, puedes agregar un texto</p>
+                                <img src="images/pic06.jpg" alt="">
+                                <p>
+                                    Otra forma de agregar texto
+                                    <img src="images/pic07.jpg" alt="">
+                                </p>
+                                <img src="images/pic08.jpg" alt="">
+                                <img src="images/pic09.jpg" alt="">
+                                <img src="images/pic10.jpg" alt="">
+                                <img src="images/pic11.jpg" alt="">
+                                <img src="images/pic12.jpg" alt="">
+                            </div>
+                        </div>
 					</section>
 
 				<!-- Section -->
@@ -70,7 +76,7 @@
 							<h2>Tomemos un café</h2>
 						</header>
 						<div class="content">
-							<p>¿Quieres consultar por: instalación/matención/reparación?</p>
+							<p>Consulta por: <strong>Instalación / Matención / Reparación?</strong></p>
 							<form>
 								<div class="fields">
 									<div class="field half">
